fixed readability on News page

--- a/style/style.css
+++ b/style/style.css
@@ -771,6 +771,7 @@ input#button {border: 0px; background: #ecede7; cursor:pointer; background-image
     font-size: 80%;
     color: #000;
     padding: 10px 5px 10px 15px;
+    line-height: 1.33em;
 }
 
 .card .contentspecial {
@@ -919,7 +920,18 @@ img, video, canvas {
 /* For separating areas of text - like a Horizontal Rule - this adds a dashed line on the BOTTOM of a DIV */
 .dashedline {
     border-bottom: 1px dashed #ecede7;
-	margin-top:5px;
+	margin-top:11px;
+}
+
+.dashedline .content {
+    color: #9a9a9a;
+}
+.dashedline .content .strong {
+    color: #000 !important;
+    font-size: 1.45em;
+    font-weight: 200;
+    margin-bottom: 50px;
+    line-height: 1.5em;
 }
 
 
